barman_k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barman
  labels:
    app: barman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barman
  template:
    metadata:
      labels:
        app: barman
    spec:
      containers:
      - name: barman
        image: barman:test
        imagePullPolicy: IfNotPresent
        command: ["sleep", "infinity"]
        volumeMounts:
        - name: barman-data
          mountPath: /var/lib/barman
        - name: barman-config
          mountPath: /etc/barman.conf
          subPath: barman.conf
        - name: barman-config
          mountPath: /etc/barman/barman.d/patronidemo.conf
          subPath: patronidemo.conf
        - name: barman-pgpass-workdir
          mountPath: /home/postgres
        - name: barman-log
          mountPath: /var/log/barman
      volumes:
      - name: barman-data
        persistentVolumeClaim:
          claimName: barman-data
      - name: barman-config
        configMap:
          name: barman-config
      - name: barman-pgpass-secret
        secret:
          secretName: barman-pgpass
      - name: barman-pgpass-workdir
        emptyDir: {}
      - name: barman-log
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: barman
  labels:
    app: barman
spec:
  type: ClusterIP
  selector:
    app: barman
  ports:
  - name: ssh
    port: 22
    targetPort: 22
