patroni_k8s.yaml
# headless service to avoid deletion of patronidemo-config endpoint
apiVersion: v1
kind: Service
metadata:
  name: patronidemo-config
  labels:
    application: patroni
    cluster-name: patronidemo
spec:
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: patronidemo
  labels:
    application: patroni
    cluster-name: patronidemo
spec:
  replicas: 5
  serviceName: patronidemo
  selector:
    matchLabels:
      application: patroni
      cluster-name: patronidemo
  template:
    metadata:
      labels:
        application: patroni
        cluster-name: patronidemo
    spec:
      serviceAccountName: patronidemo
      terminationGracePeriodSeconds: 30
      containers:
      - name: patronidemo
        image: patroni:test
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /readiness
            port: 8008
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        ports:
        - name: http
          containerPort: 8008
          protocol: TCP
        - name: pg
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: pgdata
          mountPath: /home/postgres/pgdata
        - name: barman-config
          mountPath: /etc/barman.conf
          subPath: barman.conf
        - name: barman-config
          mountPath: /etc/barman/barman.d/patronidemo.conf
          subPath: patronidemo.conf
      - name: postgres-exporter
        image: quay.io/prometheuscommunity/postgres-exporter:v0.15.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 9187
          protocol: TCP
        volumeMounts:
        - name: exporter-queries
          mountPath: /queries

      volumes:
      - name: exporter-queries
        configMap:
          name: pg-exporter-queries
      - name: barman-config
        configMap:
          name: barman-config

  volumeClaimTemplates:
  - metadata:
      name: pgdata
      labels:
        application: patroni
        cluster-name: patronidemo
    spec:
      storageClassName: standard
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 20Gi

---
apiVersion: v1
kind: Endpoints
metadata:
  name: &cluster_name patronidemo
  labels:
    application: patroni
    cluster-name: *cluster_name
subsets: []

---
apiVersion: v1
kind: Service
metadata:
  name: &cluster_name patronidemo
  labels:
    application: patroni
    cluster-name: *cluster_name
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: patronidemo-repl
  labels:
    application: patroni
    cluster-name:  &cluster_name patronidemo
    role: replica
spec:
  type: ClusterIP
  selector:
    application: patroni
    cluster-name: *cluster_name
    role: replica
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: patronidemo-metrics
  labels:
    app.kubernetes.io/name: patroni
    app.kubernetes.io/instance: patronidemo
spec:
  type: ClusterIP
  selector:
    application: patroni
    cluster-name: patronidemo   # ← 把所有 Patroni Pod（主+備）都選進來
  ports:
  - name: http-metrics          # ← 一定要有「命名」的 port，供 SM 用
    port: 8008
    targetPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: patronidemo-exporter
  labels:
    app.kubernetes.io/name: postgresql-exporter
    app.kubernetes.io/instance: patronidemo
spec:
  type: ClusterIP
  selector:
    application: patroni
    cluster-name: patronidemo   # 把 StatefulSet 的所有 Pod（主+備）都選進來
  ports:
  - name: http-metrics
    port: 9187
    targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: patronidemo-primary
  labels:
    application: patroni
    cluster-name: patronidemo
spec:
  type: ClusterIP
  selector:
    application: patroni
    cluster-name: patronidemo
    role: primary         # ← 若你的 Patroni 貼的是 primary，改成 primary
  ports:
  - name: pg
    port: 5432
    targetPort: 5432
